<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="button_true">TRUE</string>
    <string name="button_false">FALSE</string>
    <string name="button_next">NEXT</string>
    <string name="button_cheat">CHEAT</string>
    <string name="button_restart">RESTART QUIZ</string>
    <string name="button_show_answer">SHOW ANSWER</string>
    <string name="button_back">BACK TO QUIZ</string>

    <string name="question_nepal">Kathmandu is the capital of Nepal.</string>
    <string name="question_australia">Australia is larger than Asia.</string>
    <string name="question_pacific">The Pacific Ocean is the largest ocean on Earth.</string>
    <string name="question_brazil">Brazil is located in Europe.</string>
    <string name="question_sahara">The Sahara Desert is located in Africa.</string>
    <string name="question_japan">Japan is located in South America.</string>

    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>

    <string name="question_number">Question %1$d of %2$d</string>
    <string name="score_progress">Score: %1$d/%2$d | Answered: %3$d/%2$d</string>
    <string name="final_score">Quiz complete! Final score: %1$d/%2$d</string>

    <string name="choose_answer">Choose TRUE or FALSE.</string>
    <string name="already_answered">You answered this question. Tap NEXT to continue.</string>

    <string name="cheat_title">Cheat Screen</string>
    <string name="answer_hidden">Tap SHOW ANSWER to reveal the answer.</string>
    <string name="answer_true">The correct answer is TRUE.</string>
    <string name="answer_false">The correct answer is FALSE.</string>
</resources>